# GEMM_Acceleration

./: CMakeLists.txt  README.md  面向网络大模型注意力机制的通用矩阵乘法（GEMM）并行加速研究.md
.claude/: settings.local.json
include/: gemm_kernels.cuh  utils.h
results/: benchmark_results.csv
scripts/: parse_benchmark.py  plot_results.py
src/: cpu_gemm.cpp  gpu_naive.cu  gpu_tiled.cu  gpu_tiled_padded.cu  main.cu  utils.cu
